--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
         <a class="navbar-brand ml-auto" href="#">Daniela Candia</a>
         <button class="navbar-toggler boton" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,6 +29,44 @@
             </div>
         </div>
     </nav>
+    <div id="carouselExampleCaptions" class="carousel slide bg-dark" data-bs-ride="false">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/decoyeso-carrusel2.jpg" class="d-block w-100" alt="cv-carrusel1">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Primer encuentro con el mundo CSS</h5>
+              <p>Segundo desafío ... mi página de ventas online</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/iguana-carrusel3.jpg" class="d-block w-100" alt="iguana-carrusel3">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>La famosa Iguana</h5>
+              <p>Tercer desafío ...aplicando CSS y posicionamiento.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/wacken-carrusel4.jpg" class="d-block w-100" alt="wacken-carrusel4">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Aplicando bootstrap, GIT, Github Pages y Fork de repositorios</h5>
+              <p>ültimo desafío antes del examen</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 </body>
 
 </html>
