--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
-        <a class="navbar-brand ml-auto" href="#">Daniela Candia</a>
+        <a class="navbar-brand ml-auto" href="#"><img src="assets/img/LogoDani.png" alt="Logodani"></a>
         <button class="navbar-toggler boton" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/img/wacken-carrusel4.jpg" class="d-block w-100" alt="wacken-carrusel4">
+            <img src="assets/img/wacken-carrusel4.jpg" class="d-block w-100 " alt="wacken-carrusel4">
             <div class="carousel-caption d-none d-md-block">
               <h5>Aplicando bootstrap, GIT, Github Pages y Fork de repositorios</h5>
               <p>ültimo desafío antes del examen</p>
