--- a/index.html
+++ b/index.html
@@ -2,71 +2,161 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Daniela Candia</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="assets/img/favicon_io/favicon-32x32.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio Daniela Candia</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="icon" type="image/png" href="assets/img/favicon_io/favicon-32x32.png">
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
-        <a class="navbar-brand ml-auto" href="#"><img src="assets/img/LogoDani.png" alt="Logodani"></a>
-        <button class="navbar-toggler boton" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse float-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link active" href="#">Home</a>
-                <a class="nav-item nav-link" href="#sobre-mi">Sobre Mí</a>
-                <a class="nav-item nav-link" href="#portafolio">Portafolio</a>
-            </div>
-        </div>
-    </nav>
-    <div id="carouselExampleCaptions" class="carousel slide bg-dark" data-bs-ride="false">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/img/decoyeso-carrusel2.jpg" class="d-block w-100" alt="cv-carrusel1">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Primer encuentro con el mundo CSS</h5>
-              <p>Segundo desafío ... mi página de ventas online</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/img/iguana-carrusel3.jpg" class="d-block w-100" alt="iguana-carrusel3">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>La famosa Iguana</h5>
-              <p>Tercer desafío ...aplicando CSS y posicionamiento.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/img/wacken-carrusel4.jpg" class="d-block w-100 " alt="wacken-carrusel4">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Aplicando bootstrap, GIT, Github Pages y Fork de repositorios</h5>
-              <p>ültimo desafío antes del examen</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white fixed-top">
+    <a class="navbar-brand ml-auto" href="#"><img src="assets/img/LogoDani.png" alt="Logodani"></a>
+    <button class="navbar-toggler boton" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse float-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link active" href="#">Home</a>
+        <a class="nav-item nav-link" href="#sobre-mi">Sobre Mí</a>
+        <a class="nav-item nav-link" href="#portafolio">Portafolio</a>
       </div>
+    </div>
+  </nav>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner bg-dark">
+      <div class="carousel-item active">
+        <img src="assets/img/decoyeso-carrusel.jpg" class="d-block img-fluid mx-auto" alt="cv-carrusel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Primer encuentro con el mundo CSS</h5>
+          <p>Segundo desafío ... mi página de ventas online</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/iguana-carrusel.jpg" class="d-block img-fluid mx-auto" alt="iguana-carrusel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>La famosa Iguana</h5>
+          <p>Tercer desafío ...aplicando CSS y posicionamiento.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/wacken-carrusel.jpg" class="d-block img-fluid mx-auto" alt="wacken-carrusel">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Aplicando bootstrap, GIT, Github Pages y Fork de repositorios</h5>
+          <p>ültimo desafío antes del examen</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="container-fluid bg-dark">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 p-4 text-center"> <img class="mw-100" src="assets/img/Foto-perfil2.jpeg"
+          alt="Presentacion">
+      </div>
+      <div class="col-xs-12 col-sm-6 p-5 text-light">
+        <h1> Un poco de mí</h1>
+        <p> Soy enfermera de profesión y vocación. Actualmente trabajo en Gestión de Calidad y en atención
+          prehospitalaria.</p>
+        <p> </p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=1" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=2" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=3" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=1" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=2" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card" style="width: 100%;">
+          <img src="https://placedog.net/500/300?id=3" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
