modifico foto y descripción sobre mi

--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
-  <div class="container-fluid bg-dark">
+  <div id="sobre-mi" class="container-fluid bg-dark">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 p-4 text-center"> <img class="mw-100" src="assets/img/Foto-perfil2.jpeg"
-          alt="Presentacion">
+      <div class="col-xs-12 col-sm-6 p-4 text-center">
+        <img class="mw-100" src="assets/img/foto-cv-400x400.jpeg" alt="fotoCV">
       </div>
       <div class="col-xs-12 col-sm-6 p-5 text-light">
-        <h1> Un poco de mí</h1>
-        <p> Soy enfermera de profesión y vocación. Actualmente trabajo en Gestión de Calidad y en atención
-          prehospitalaria.</p>
-        <p> </p>
+        <h1>Sobre mí</h1>
+        <p>Enfermera de profesión y vocación. </p>
+        <p>Actualmente trabajo en Gestión de Procesos y Calidad. Además, realizo turnos en atención prehospitalaria (eso quiere decir ambulancias). Durante 4 años he sido contraparte de diferentes servicios que utilizan productos asociados a la tecnología. Lo que me permitió evidenciar la brecha existente entre estos mundos</p>
+        <p>Mi principal motivación para introducirme en el mundo de las Tecnologías de la Información es trabajar en una empresa con una cultura basada en buenas prácticas, Agilidad y con foco en la mejora continua tanto de los aspectos técnicos (Desarrollo) y aspectos culturales (Personas)</p>
       </div>
     </div>
   </div>
+  
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-4">
