Agrego portafolio utilizando card de Bootstrap

--- a/index.html
+++ b/index.html
@@ -83,79 +83,71 @@
       </div>
     </div>
   </div>
-  
-  <div class="container-fluid">
+  <div id="portafolio" class="container-fluid bg-dark text-light text-center pt-4">
+    <h1>Mi Portafolio</h1>
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=1" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col-sm-12 col-md-4 p-5">
+        <div class="card w-100">
+          <img class="p-2" src="assets/img/curriculum-vitae.png" class="card-img-top" alt="curriculum-vitae">
+          <div class="card-body text-dark">
+            <hr>
+            <h5 class="card-title">Primer desafío en HTML</h5>
+            <p class="card-text">Curriculum Vitae</p>
+            <a href="https://danicandia.github.io/curriculum-vitae" class="btn btn-dark" target="_blank">Demo</a>
+            <a href="https://github.com/danicandia/curriculum-vitae" class="btn btn-dark" target="_blank">Github</a>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=2" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col-sm-12 col-md-4 p-5">
+        <div class="card w-100">
+          <img class="p-2" src="assets/img/decoyeso-css.png" class="card-img-top" alt="decoyeso-css">
+          <div class="card-body text-dark">
+            <hr>
+            <h5 class="card-title">Encuentro con el mundo CSS</h5>
+            <p class="card-text">Decoyeso... Mi página de ventas online</p>
+            <a href="https://danicandia.github.io/decoyeso-css" class="btn btn-dark" target="_blank">Demo</a>
+            <a href="https://github.com/danicandia/decoyeso-css" class="btn btn-dark" target="_blank">Github</a>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=3" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col-sm-12 col-md-4 p-5">
+        <div class="card w-100">
+          <img class="p-2" src="assets/img/iguana-page.png" class="card-img-top" alt="iguana-page">
+          <div class="card-body text-dark">
+            <hr>
+            <h5 class="card-title">Aplicando CSS y posicionamiento</h5>
+            <p class="card-text">La famosa Iguana Page</p>
+            <a href="https://danicandia.github.io/iguana-page" class="btn btn-dark" target="_blank">Demo</a>
+            <a href="https://github.com/danicandia/iguana-page" class="btn btn-dark" target="_blank">Github</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=1" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="row">
+        <div class="col-sm-12 col-md-4 p-5">
+          <div class="card w-100">
+            <img class="p-2" src="assets/img/cuppon.png" class="card-img-top" alt="cuppon">
+            <div class="card-body text-dark">
+              <hr>
+              <h5 class="card-title">Aprendiendo Bootstrap</h5>
+              <p class="card-text">Cuppon</p>
+              <a href="https://danicandia.github.io/cuppon" class="btn btn-dark" target="_blank">Demo</a>
+              <a href="https://github.com/danicandia/cuppon" class="btn btn-dark" target="_blank">Github</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 p-5">
+          <div class="card w-100">
+            <img class="p-2" src="assets/img/wacken.png" class="card-img-top" alt="...">
+            <div class="card-body text-dark">
+              <hr>
+              <h5 class="card-title">GIT, Github Pages y Forking</h5>
+              <p class="card-text">Wacken Open Air</p>
+              <a href="https://danicandia.github.io/wacken" class="btn btn-dark" target="_blank">Demo</a>
+              <a href="https://github.com/danicandia/wacken" class="btn btn-dark" target="_blank">Github</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=2" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="card" style="width: 100%;">
-          <img src="https://placedog.net/500/300?id=3" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 </body>
 
