--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
       <div class="col-xs-12 col-sm-6 p-5 text-light">
         <h1>Sobre mí</h1>
         <p>Enfermera de profesión y vocación. </p>
-        <p>Actualmente trabajo en Gestión de Procesos y Calidad. Además, realizo turnos en atención prehospitalaria (eso quiere decir ambulancias). Durante 4 años he sido contraparte de diferentes servicios que utilizan productos asociados a la tecnología. Lo que me permitió evidenciar la brecha existente entre estos mundos</p>
-        <p>Mi principal motivación para introducirme en el mundo de las Tecnologías de la Información es trabajar en una empresa con una cultura basada en buenas prácticas, Agilidad y con foco en la mejora continua tanto de los aspectos técnicos (Desarrollo) y aspectos culturales (Personas)</p>
+        <p>Actualmente trabajo en Gestión de Procesos y Calidad. Además, realizo turnos en atención prehospitalaria (eso
+          quiere decir ambulancias). Durante 4 años he sido contraparte de diferentes servicios que utilizan productos
+          asociados a la tecnología. Lo que me permitió evidenciar la brecha existente entre estos mundos</p>
+        <p>Mi principal motivación para introducirme en el mundo de las Tecnologías de la Información es trabajar en una
+          empresa con una cultura basada en buenas prácticas, Agilidad y con foco en la mejora continua tanto de los
+          aspectos técnicos (Desarrollo) y aspectos culturales (Personas)</p>
       </div>
     </div>
   </div>
@@ -148,7 +152,7 @@
           </div>
         </div>
       </div>
-
+      <footer class="py-3">&copy; 2022 Daniela Candia</footer>
 </body>
 
 </html>
