cambiando un <p> por un <h6> en la linea 80

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 p-5 text-light">
         <h1>Sobre mí</h1>
-        <p>Enfermera de profesión y vocación. </p>
+        <h6>Enfermera de profesión y vocación. </h6>
         <p>Actualmente trabajo en Gestión de Procesos y Calidad. Además, realizo turnos en atención prehospitalaria (eso
           quiere decir ambulancias). Durante 4 años he sido contraparte de diferentes servicios que utilizan productos
           asociados a la tecnología. Lo que me permitió evidenciar la brecha existente entre estos mundos</p>
